--- a/package.json
+++ b/package.json
@@ -8,11 +8,38 @@
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest run",
+    "test:run": "vitest run",
+    "test:watch": "vitest --watch",
     "format": "prettier --write .",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "prepare": "husky",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest",
+      "prettier"
+    ],
+    "plugins": [
+      "prettier",
+      "cypress"
+    ],
+    "env": {
+      "cypress/globals": true
+    },
+    "rules": {
+      "prettier/prettier": "warn"
+    }
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
@@ -28,11 +55,15 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "cypress": "^13.6.4",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.10",
     "jsdom": "^23.2.0",
+    "lint-staged": "^15.2.1",
     "prettier": "^3.2.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
