--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - uses: oven-sh/bun@v1
+      - uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
       - name: Install Dependencies
