--- a/package.json
+++ b/package.json
@@ -28,17 +28,26 @@
     "extends": [
       "react-app",
       "react-app/jest",
-      "prettier"
+      "prettier",
+      "eslint:recommended",
+      "plugin:react/recommended"
     ],
     "plugins": [
       "prettier",
-      "cypress"
+      "cypress",
+      "react-hooks"
     ],
+    "globals": {
+      "vi": true
+    },
     "env": {
       "cypress/globals": true
     },
     "rules": {
-      "prettier/prettier": "warn"
+      "prettier/prettier": "warn",
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn",
+      "react/react-in-jsx-scope": "off"
     }
   },
   "dependencies": {
@@ -62,6 +71,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
     "husky": "^9.0.10",
     "jsdom": "^23.2.0",
     "lint-staged": "^15.2.1",
