--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "husky": "^9.0.10",
     "jsdom": "^23.2.0",
     "lint-staged": "^15.2.1",
+    "nock": "^13.5.1",
     "prettier": "^3.2.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
